# MH

./: .gitignore  LEEME  README.md  Tablas_MDD_2021-22.xls  makefile
pfinal/cec2017real-master/code/: .ninja_deps  .ninja_log  CMakeLists.txt  big-bang_big-crunch.cpp  big-bang_big-crunch_bmb.cpp  big-bang_big-crunch_ls.cpp  big-bang_big-crunch_original.cpp  bmb  build.ninja  improvement  libcec17_test_func.dylib  ls  original  pub  test
pfinal/cec2017real-master/code/results_bmb/: results_10_10.txt  results_10_100.txt  results_10_30.txt  results_10_50.txt  results_11_10.txt  results_11_100.txt  results_11_30.txt  results_11_50.txt  results_12_10.txt  results_12_100.txt  results_12_30.txt  results_12_50.txt  results_13_10.txt  results_13_100.txt  results_13_30.txt  results_13_50.txt  results_14_10.txt  results_14_100.txt  results_14_30.txt  results_14_50.txt  results_15_10.txt  results_15_100.txt  results_15_30.txt  results_15_50.txt  results_16_10.txt  results_16_100.txt  results_16_30.txt  results_16_50.txt  results_17_10.txt  results_17_100.txt  results_17_30.txt  results_17_50.txt  results_18_10.txt  results_18_100.txt  results_18_30.txt  results_18_50.txt  results_19_10.txt  results_19_100.txt  results_19_30.txt  results_19_50.txt  (+84 more)
pfinal/cec2017real-master/code/results_ls/: results_10_10.txt  results_10_100.txt  results_10_30.txt  results_10_50.txt  results_11_10.txt  results_11_100.txt  results_11_30.txt  results_11_50.txt  results_12_10.txt  results_12_100.txt  results_12_30.txt  results_12_50.txt  results_13_10.txt  results_13_100.txt  results_13_30.txt  (+109 more)
(+333 files in other folders)
