if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set (CMAKE_CXX_STANDARD 17)

PROJECT(cec17)
ADD_EXECUTABLE(test "test.cc")
ADD_EXECUTABLE(testrandom "testrandom.cc")
ADD_EXECUTABLE(testsolis "testsolis.cc")
ADD_EXECUTABLE(original "big-bang_big-crunch_original.cpp")
ADD_EXECUTABLE(ls "big-bang_big-crunch_ls.cpp")
ADD_EXECUTABLE(bmb "big-bang_big-crunch_bmb.cpp")
ADD_LIBRARY("cec17_test_func" SHARED "cec17_test_func.c" "cec17.c")
TARGET_LINK_LIBRARIES(test "cec17_test_func")
TARGET_LINK_LIBRARIES(testrandom "cec17_test_func")
TARGET_LINK_LIBRARIES(testsolis "cec17_test_func")
TARGET_LINK_LIBRARIES(test "cec17_test_func")
TARGET_LINK_LIBRARIES(original "cec17_test_func")
TARGET_LINK_LIBRARIES(ls "cec17_test_func")
TARGET_LINK_LIBRARIES(bmb "cec17_test_func")